# pln-exercise-master-sentiment-analysis

./: .env.example  .gitignore  README.md  pyproject.toml
Rules/: rules.md
docs/: 0.Intro(1).pptx  1.Introducao_RNs.pptx  2.Representacao_Textual.pptx  3. Extração de Informação.pptx
notebooks/: 01_exploracao_dados.ipynb  02_preprocessamento.ipynb  03_svm_bow.ipynb  04_svm_embeddings.ipynb  05_bert.ipynb  06_icl_claude.ipynb  07_comparacao_final.ipynb
src/: config.py  data_loader.py  evaluation.py  feature_extraction.py  preprocessing.py  utils.py
tasks/: lessons.md  todo.md
