[tool.poetry]
name = "pln-sentiments"
version = "0.1.0"
description = "Análise de Sentimentos em Avaliações de Produtos - Módulo 1 PLN"
authors = ["PLN Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2"
numpy = "^1.26"
scikit-learn = "^1.5"
datasets = "^3.0"
nltk = "^3.9"
spacy = "^3.7"
gensim = "^4.3"
torch = "^2.4"
transformers = "^4.44"
accelerate = "^0.34"
anthropic = "^0.34"
matplotlib = "^3.9"
seaborn = "^0.13"
wordcloud = "^1.9"
jupyter = "^1.1"
python-dotenv = "^1.0"
tqdm = "^4.66"
pyarrow = "^17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
